--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -7,3 +7,8 @@
     transition: 0.3s ease-in-out;
     transform: scale(1.1);
 }
+.navbar {
+    height: 60px;
+    display: block;
+    position: fixed;
+}
