--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,14 @@
 <div class="container">
-    <h1 style="text-align: center;" class="display-5">Hot Product</h1>
+    <h1 style="text-align: center;" class="display-5">Hot Products</h1>
     <div class="row row-cols-1 row-cols-md-4 g-4">
         <div class="col" *ngFor="let item of productsList">
                 <div class="card">
                     <img src="{{ item.image }}" class="card-img-top img-product" alt="product">
-                    <div class="card-body">
+                    <div class="card-body dark">
                         <h5 class="card-title" style="white-space:nowrap;overflow: hidden; text-overflow: ellipsis; max-width: 50ch;">{{ item.title }}</h5>
                         <p class="card-text" style="white-space:nowrap;overflow: hidden; text-overflow: ellipsis; max-width: 150ch;">{{ item.description }}</p>
                         <h6>${{ item.price }}</h6>
-                        <a href="#" class="btn btn-primary">Add To Cart</a>
+                        <button class="btn btn-dark" (click)="addToCart(item)">Add To Cart</button>
                     </div>
                 </div>
         </div>
