--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -42,7 +42,7 @@
             <img src="https://rukminim1.flixcart.com/www/800/800/promos/16/05/2019/d438a32e-765a-4d8b-b4a6-520b560971e8.png?q=90" alt="">
             <h4>Your Cart Is Empty!</h4>
             <h6>Add Items To It Now</h6>
-            <button routerLink="/products" class="btn btn-dark" style="margin-bottom: 100px;">Shop Now</button>
+            <button routerLink="" class="btn btn-dark" style="margin-bottom: 100px;">Shop Now</button>
         </div>
     </div>
 </ng-container>
