--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h1 style="text-align: center;" class="display-5">Hot Products</h1>
     <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col" *ngFor="let item of productsList">
+        <div class="col" *ngFor="let item of productsList | paginate: { itemsPerPage: 4, currentPage: page, totalItems:totalLength }">
                 <div class="card">
                     <img src="{{ item.image }}" class="card-img-top img-product" alt="product">
                     <div class="card-body dark">
@@ -12,5 +12,6 @@
                     </div>
                 </div>
         </div>
-    </div>
+    </div><br>
+    <pagination-controls class="text-center my-pagination" (pageChange)="page = $event"></pagination-controls>
 </div>
