--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -24,7 +24,7 @@
             <button routerLink="" class="btn btn-primary">Shop More</button>
           </div>
           <div class="col">
-            <button class="btn btn-success">Checkout</button>
+            <button routerLink='/checkout' class="btn btn-success">Checkout</button>
           </div>
           <div class="col">
             <strong>Grand Total : ${{grandTotal}}</strong>
