--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -15,3 +15,12 @@
 .my-pagination /deep/ .ngx-pagination .current {
     background: rgb(29, 29, 29);
   }
+
+  .btn-dark:hover{
+      background-color: rgb(255, 255, 255);
+      color: black;
+  }
+  .btn-dark:active{
+      background-color: rgb(43, 43, 43);
+      color: rgb(255, 255, 255);
+  }
